# reqboost

./: .gitignore  Adapter_8cpp.html  Adapter_8h.html  Adapter_8h_source.html  ApiBindings_8cpp.html  ApiBindings_8cpp__incl.map  ApiBindings_8cpp__incl.md5  ApiBindings_8h.html  ApiBindings_8h__dep__incl.map  ApiBindings_8h__dep__incl.md5  ApiBindings_8h__incl.map  ApiBindings_8h__incl.md5  ApiBindings_8h_source.html  Api_8cpp.html  Api_8cpp__incl.map  Api_8cpp__incl.md5  Api_8h.html  Api_8h__dep__incl.map  Api_8h__dep__incl.md5  Api_8h__incl.map  Api_8h__incl.md5  Api_8h_source.html  Auth_8cpp.html  Auth_8h.html  Auth_8h_source.html  CMakeLists.txt  Certs_8cpp.html  Certs_8h.html  Certs_8h_source.html  Cookies_8cpp.html  Cookies_8h.html  Cookies_8h_source.html  Doxyfile  Doxyfile-mcss  ExceptionBindings_8cpp.html  ExceptionBindings_8cpp__incl.map  ExceptionBindings_8cpp__incl.md5  ExceptionBindings_8h.html  ExceptionBindings_8h__dep__incl.map  ExceptionBindings_8h__dep__incl.md5  (+300 more)
.github/: dependabot.yml
.github/workflows/: docs  docs.yml  format.yml  wheels.yml
include/reqboost/: Api.h  Certs.h  Compat.h  Exceptions.h  InternalUtility.h  Models.h  Sessions.h  StatusCodes.h  Utility.h
include/reqboost/bindings/: ApiBindings.h  ExceptionBindings.h  ModelsBindings.h  SessionBindings.h  UtilityBindings.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+48 more)
src/: Api.cpp  Certs.cpp  Compat.cpp  Exceptions.cpp  InternalUtility.cpp  Models.cpp  Reqboost.cpp  Sessions.cpp  StatusCodes.cpp  Utility.cpp
src/bindings/: ApiBindings.cpp  ExceptionBindings.cpp  ModelsBindings.cpp  SessionBindings.cpp  UtilityBindings.cpp
tests/: test_client.py  test_exceptions.py  test_models.py
