[project]
name = "reqboost"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Topic :: Internet :: WWW/HTTP",
  "License :: OSI Approved :: Apache Software License",
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Khushiyant", email = "khushiyant2002@gmail.com" }]
dynamic = ["version", "description", "readme"]
keywords = ["python", "http", "requests", "curl", "poco", "pybind11"]
dependencies = ["pybind11>=2.10.0", "cmake"]

[project.optional-dependencies]
test = ["pre-commit", "pytest"]

[build-system]
requires = ["setuptools>=42", "pybind11", "cmake", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "setup.py"
python_version = "3.7"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
